summative.moria.Moria.scala.error
Compilation error:
Moria:5: error: not found: value Direction
   while(getDirection() != Direction.EAST){
                           ^Moria:15: error: not found: value Direction
     while(getDirection() != Direction.WEST){
                             ^